# dasrobot_pkgs

./: LICENSE  README.md
dasrobot_description/: CMakeLists.txt  package.xml
dasrobot_description/config/: description_config.rviz
dasrobot_description/launch/: description.launch.py
dasrobot_description/urdf/: base.xacro  gazebo_plugins.xacro  inertial_macros.xacro  lidar.xacro  materials.xacro  properties.xacro  robot.urdf.xacro  wheels.xacro
dasrobot_navigation/: LICENSE  package.xml  setup.cfg  setup.py
dasrobot_navigation/config/: nav2_params.yaml  navigation_config.rviz
dasrobot_navigation/dasrobot_navigation/: dasrobot_go_to_the_point_node.py
dasrobot_navigation/launch/: navigation.launch.py
dasrobot_navigation_щдв/: CMakeLists.txt  package.xml
dasrobot_simulation/: CMakeLists.txt  package.xml
dasrobot_simulation/config/: bridge.yaml  simulation_config.rviz
dasrobot_simulation/launch/: simulation.launch.py
dasrobot_simulation/worlds/: simulation_world.sdf
dasrobot_voice/: package.xml  setup.cfg  setup.py
dasrobot_voice/dasrobot_voice/: dasrobot_speech_to_text_node.py  dasrobot_text_to_speech_node.py
dasrobot_voice/launch/: voice.launch.py
