<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dasrobot_navigation</name>
  <version>0.0.0</version>
  <description>Dasrobot navigation package</description>
  <maintainer email="das.dev.dt@gmail.com">Dmitry Savin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>dasrobot_simulation</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
